Fixed note content text overflow Closes #47

--- a/source/styling/index.css
+++ b/source/styling/index.css
@@ -333,7 +333,7 @@ main {
 }
 
 .note-text {
-  height: 70%;
+  height: 11rem;
   -webkit-mask-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 1)), to(rgba(0, 0, 0, 0.2)));
 }
 
